# jdaughter

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
examples/: example-datas.jd  example.cpp
include/: jdaughter.hpp
src/: jdaughter.cpp
